SynProdGITV1/force-app/main/default/objects/Lead/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <description>Inc 161946, Field added to track the conferences throughout the sales phase</description>
    <label>Exhibition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>