SynProdGITV1/force-app/main/default/objects/Lead/fields/Industry_Segment_Import__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_Import__c</fullName>
    <description>Used in Data Import (not visible on UI)</description>
    <label>Industry Segment (Import)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>