SynProdGITV1/force-app/main/default/objects/Lead/fields/Industry_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_Name__c</fullName>
    <description>SS2-T36: Displays the Name of the related Industry Segment to allow filtering in Lead Assignment Rules, as lookup fields cannot be used directly.</description>
    <formula>Industry_Segment__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Segment Name</label>
    <type>Text</type>
</CustomField>