SynProdGITV1/force-app/main/default/objects/Lead/fields/Lead_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Disqualification_Reason__c</fullName>
    <description>SS2-T35 : This field for storing Lead Disqualification Reason if Lead is marked disqualified</description>
    <inlineHelpText>Please select a reason for dis-qualifying the lead</inlineHelpText>
    <label>Lead Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic or research-only inquiry</fullName>
            </value>
            <value>
                <fullName>Budget not available</fullName>
            </value>
            <value>
                <fullName>Contact left the company</fullName>
            </value>
            <value>
                <fullName>Contact no longer interested or has changed their mind</fullName>
            </value>
            <value>
                <fullName>Duplicate lead entry</fullName>
            </value>
            <value>
                <fullName>Invalid or unreachable contact</fullName>
            </value>
            <value>
                <fullName>Lead has moved to a competitor</fullName>
            </value>
            <value>
                <fullName>No relevant chemical application or industrial need</fullName>
            </value>
            <value>
                <fullName>Outside target geography or market</fullName>
            </value>
            <value>
                <fullName>Project cancelled or postponed indefinitely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>