SynProdGITV1/force-app/main/default/objects/Lead/fields/Lead_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Lead External ID used for data migration.</description>
    <externalId>true</externalId>
    <label>Lead External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>