SynProdGITV1/force-app/main/default/objects/Lead/validationRules/Prevent_Lead_Creation_Without_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Lead_Creation_Without_Country</fullName>
    <active>true</active>
    <description>SS2-T37</description>
    <errorConditionFormula>ISBLANK(Country)</errorConditionFormula>
    <errorMessage>Lead cannot be saved without Country</errorMessage>
</ValidationRule>