SynProdGITV1/force-app/main/default/objects/Lead/validationRules/Require_Reason_for_Lead_Disqualification.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_for_Lead_Disqualification</fullName>
    <active>true</active>
    <description>SS2-T39</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Disqualified&quot;),
    ISBLANK(TEXT(Lead_Disqualification_Reason__c))
)</errorConditionFormula>
    <errorMessage>Reason is mandatory for a &quot;Disqualified&quot; Lead</errorMessage>
</ValidationRule>