SynProdGITV1/force-app/main/default/objects/Lead/listViews/Acrylate_Monomers_Lead.listView-meta.xml
<ListView>
    <fullName>Acrylate_Monomers_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Acrylate Monomers</label>
    <queue>Acrylate_Monomers</queue>
    <sharedTo>
        <territoryAndSubordinates>Synthomer.Health_Protection_and_Performance_Material</territoryAndSubordinates>
    </sharedTo>
</ListView>