SynProdGITV1/force-app/main/default/objects/Lead/listViews/AO_Europe_Lead.listView-meta.xml
<ListView>
    <fullName>AO_Europe_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Industry_Segment__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>AO Europe</label>
    <queue>AO_Europe</queue>
    <sharedTo>
        <territoryAndSubordinates>Synthomer.Health_Protection_and_Performance_Material</territoryAndSubordinates>
    </sharedTo>
</ListView>