SynProdGITV1/force-app/main/default/objects/Lead/listViews/AO_SEA_China_Lead.listView-meta.xml
<ListView>
    <fullName>AO_SEA_China_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Industry_Segment_Name__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>AO SEA &amp; China</label>
    <queue>AO_SEA_China</queue>
    <sharedTo>
        <territoryAndSubordinates>Synthomer.Health_Protection_and_Performance_Material</territoryAndSubordinates>
    </sharedTo>
</ListView>