SynProdGITV1/force-app/main/default/objects/Lead/listViews/Architectural_Coatings_Lead.listView-meta.xml
<ListView>
    <fullName>Architectural_Coatings_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Architectural Coatings</label>
    <queue>Architectural_Coatings</queue>
    <sharedTo>
        <territoryAndSubordinates>Synthomer.Coating_Construction_Solutions</territoryAndSubordinates>
    </sharedTo>
</ListView>