SynProdGITV1/force-app/main/default/objects/Lead/listViews/AS_Greater_China_Lead.listView-meta.xml
<ListView>
    <fullName>AS_Greater_China_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Industry_Segment__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>AS Greater China</label>
    <queue>AS_Greater_China</queue>
    <sharedTo>
        <territoryAndSubordinates>Synthomer.Adhesive_Solutions</territoryAndSubordinates>
    </sharedTo>
</ListView>